# cookiecutter-python

./: .cruft.json  .gitignore  README.md  cookiecutter.json  pyproject.toml
{{ cookiecutter.project_name }}/: {% if cookiecutter.license == 'Apache-2.0' -%} LICENSE {%- endif %}
{{ cookiecutter.project_name }}/.github/workflows/: release.yml
{{ cookiecutter.project_name }}/src/: __main__.py
{{ cookiecutter.project_slug }}/: pyproject.toml  {% if cookiecutter.license == 'GPL-3.0-only' -%} LICENSE {%- endif %}  {% if cookiecutter.license == 'MIT' -%} LICENSE {%- endif %}
{{ cookiecutter.project_slug }}/.github/workflows/: tests.yml
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/: pull_request_template.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py
