[tool.poetry]
name = "cookiecutter-python"
version = "0.1.0"
description = "Modern cookiecutter project template for python"
authors = ["Quinn McHugh <qpmchugh@gmail.com>"]
license = "MIT"
readme = "README.md"

documentation = "https://quinn-p-mchugh.github.io/cookiecutter-python"
homepage = "https://quinn-p-mchugh.github.io/cookiecutter-python"
repository = "https://github.com/quinn-p-mchugh/cookiecutter-python"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

packages = [
    { include = "cookiecutter_python", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.7.1, <4.0"

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "*"
ruff = "*"
isort = "*"
mkdocstrings = {version = ">=0.18", extras = ["python"]}
mkdocs-material = "*"
mypy = "*"
pep8-naming = "*"
pre-commit = "*"
pymdown-extensions = "*"
pytest = "*"
pytest-github-actions-annotate-failures = "*"
pytest-cov = "*"
python-kacl = "*"
pyupgrade = "*"
tryceratops = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
target-version = ["py37", "py38", "py39"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = """\
    --cov {{ cookiecutter.package_name }} \
    --cov tests \
    --cov-report term-missing \
    --no-cov-on-fail \
"""

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    "old",
    "build",
    "dist",
    ".venv",
    ".eggs",
    ".tox",
]
ignore = [
    "A003",
    "B008",
    "E501",
]
select = [
    "A",
    "B",
    "C9",
    "E",
    "F",
    "N",
    "W",
]

[tool.ruff.mccabe]
# Enables maccabe complexity checks
#   see https://github.com/PyCQA/mccabe
max-complexity = 10

[tool.ruff.pep8-naming]
classmethod-decorators = [
    "classmethod",
    "validator",
    "root_validator",
]

[tool.ruff.per-file-ignores]
# star imports in `__init__.py` files are ok
"*/__init__.py" = ["F401"]